<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.marksManager.MarksManagerFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_marks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_marks_manager" />

    <FrameLayout
        android:id="@+id/block_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@color/white"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.cardview.widget.CardView
        android:id="@+id/edit_mark_screen"
        android:layout_width="@dimen/add_mark_screen_width"
        android:layout_height="@dimen/add_mark_screen_height"
        android:layout_gravity="center"
        android:visibility="gone"
        app:cardBackgroundColor="@color/lime_50"
        app:cardCornerRadius="@dimen/add_mark_screen_corner_radius"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/add_mark_screen_inner_margin_horizontal"
                android:hint="@string/mark_name_hint"
                app:helperText="@string/mark_name_helper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mark_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/add_mark_screen_inner_margin_horizontal"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:hint="@string/mark_lat_hint"
                    app:helperText="@string/mark_lat_helper">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mark_lat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:hint="@string/mark_long_hint"
                    app:helperText="@string/mark_long_helper">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mark_long"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/add_mark_screen_inner_margin_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add_mark_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add_mark_accept"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes" />


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>