<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainScreenFragment">

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/map_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_search_my_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/search_my_location_button_margin_end"
        android:layout_marginBottom="@dimen/search_my_location_button_margin_bottom"
        android:background="@color/transparent_500"
        android:src="@drawable/ic_baseline_location_searching_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_add_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/search_my_location_button_margin_end"
        android:layout_marginBottom="@dimen/add_mark_button_margin_bottom"
        android:background="@color/transparent_500"
        android:src="@drawable/ic_baseline_add_circle_outline_24"
        app:layout_constraintBottom_toTopOf="@id/btn_search_my_location"
        app:layout_constraintEnd_toEndOf="parent" />

    <FrameLayout
        android:id="@+id/block_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@color/white"
        android:visibility="gone" />

    <androidx.cardview.widget.CardView
        android:id="@+id/add_mark_screen"
        android:layout_width="@dimen/add_mark_screen_width"
        android:layout_height="@dimen/add_mark_screen_height"
        android:visibility="gone"
        app:cardBackgroundColor="@color/lime_50"
        app:cardCornerRadius="@dimen/add_mark_screen_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/add_mark_screen_inner_margin_horizontal"
                android:hint="@string/mark_name_hint"
                app:helperText="@string/mark_name_helper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mark_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/add_mark_screen_inner_margin_horizontal"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:hint="@string/mark_lat_hint"
                    app:helperText="@string/mark_lat_helper">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mark_lat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:hint="@string/mark_long_hint"
                    app:helperText="@string/mark_long_helper">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mark_long"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/add_mark_screen_inner_margin_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add_mark_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add_mark_accept"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes" />


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>